--- a/configure.ac
+++ b/configure.ac
@@ -100,7 +100,8 @@ extra_runtime_ldflags=""
 # Hack for WASM
 # Current autotools (v1.15) doesn't have a triplet we can use for wasm so the kludge we do is to
 # work around it by using a feature flag instead
-AC_ARG_ENABLE(wasm,[  --enable-wasm	Hack to set the current runtime to target wasm], enable_wasm=$enableval)
+AC_ARG_ENABLE(wasm_host,[  --enable-wasm-host	Hack to set the current runtime to wasm host], enable_wasm_host=$enableval)
+AC_ARG_ENABLE(wasm_target,[  --enable-wasm-target	Hack to set the current runtime to wasm target], enable_wasm_target=$enableval)
 
 # Thread configuration inspired by sleepycat's db
 AC_MSG_CHECKING([host platform characteristics])
@@ -116,7 +117,7 @@ platform_android=no
 host_darwin=no
 
 
-if test "x$enable_wasm" = "xyes"; then
+if test "x$enable_wasm_host" = "xyes"; then
 CFLAGS="$CFLAGS -D_REENTRANT -D_GNU_SOURCE -DNO_UNALIGNED_ACCESS -s WASM=1"
 CPPFLAGS="$CPPFLAGS -D_REENTRANT -DUSE_MMAP -D_GNU_SOURCE -DNO_UNALIGNED_ACCESS -s WASM=1"
 libdl="-ldl"
@@ -555,7 +556,7 @@ AC_CHECK_FUNCS(_finite, , AC_MSG_CHECKING(for _finite in math.h)
 AC_CHECK_HEADERS(linux/magic.h)
 
 # not 64 bit clean in cross-compile
-if test "x$enable_wasm" = "xyes"; then
+if test "x$enable_wasm_target" = "xyes"; then
 AC_DEFINE(SIZEOF_VOID_P,4)
 AC_DEFINE(SIZEOF_LONG,4)
 ac_cv_sizeof_void_p="4"
@@ -3073,18 +3074,6 @@ boehm_supported=true
 BTLS_SUPPORTED=no
 BTLS_PLATFORM=
 
-if test "x$enable_wasm" = "xyes"; then
-TARGET=WASM
-HOST=WASM
-arch_target=wasm
-AC_DEFINE(TARGET_WASM, 1, [Target wasm])
-AC_DEFINE(HOST_WASM, 1, [Host wasm])
-BTLS_SUPPORTED=no
-with_tls=pthread
-target_mach=no
-
-else
-
 case "$host" in
 	mips*)
 		TARGET=MIPS;
@@ -3419,6 +3408,24 @@ if test "x$host" != "x$target"; then
 	esac
 fi
 
+
+if test "x$enable_wasm_host" = "xyes"; then
+HOST=WASM
+fi
+
+if test "x$enable_wasm_target" = "xyes"; then
+
+TARGET=WASM
+arch_target=wasm
+BTLS_SUPPORTED=no
+with_tls=pthread
+target_mach=no
+
+fi
+
+# AC_DEFINE(TARGET_WASM, 1, [Target wasm])
+# AC_DEFINE(HOST_WASM, 1, [Host wasm])
+
 case "$TARGET" in
 X86)
 	AC_DEFINE(TARGET_X86, 1, [...])
@@ -3450,6 +3457,9 @@ SPARC)
 	;;
 SPARC64)
 	AC_DEFINE(TARGET_SPARC64, 1, [...])
+	;;
+WASM)
+	AC_DEFINE(TARGET_WASM, 1, [...])
 	;;
 esac
 
@@ -3485,10 +3495,11 @@ SPARC)
 SPARC64)
 	AC_DEFINE(HOST_SPARC64, 1, [...])
 	;;
+WASM)
+	AC_DEFINE(HOST_WASM, 1, [...])
+	;;
 esac
 
-#WASM hack
-fi
 
 
 dnl *************
