Add new profile for monodroid tools
This allows the XA build to use these instead of needing to build net_4_x.
We build the assemblies against the .NET 4.6 reference assemblies.

--- a/runtime/Makefile.am
+++ b/runtime/Makefile.am
@@ -33,7 +33,7 @@ net_profile = net_4_x
 endif
 
 if INSTALL_MONODROID
-build_profiles += monodroid
+build_profiles += monodroid monodroid_tools
 endif
 
 if INSTALL_MONOTOUCH
