--- a/mono/mini/Makefile.am.in
+++ b/mono/mini/Makefile.am.in
@@ -81,7 +81,7 @@ endif
 # hack for automake to have the same source file in a library and a bin
 genmdesc_CFLAGS = $(AM_CFLAGS)
 
-monoldflags=$(export_ldflags)
+monoldflags=$(export_ldflags) -lbinaryen -L.
 monobinldflags=$(export_ldflags) $(extra_runtime_ldflags)
 
 if HOST_WIN32
