--- a/mono/mini/Makefile.am.in
+++ b/mono/mini/Makefile.am.in
@@ -82,7 +82,7 @@ endif
 genmdesc_CFLAGS = $(AM_CFLAGS)
 
 monoldflags=$(export_ldflags) -lbinaryen -L.
-monobinldflags=$(export_ldflags) $(extra_runtime_ldflags)
+monobinldflags=$(export_ldflags) $(extra_runtime_ldflags) -lbinaryen -L.
 
 if HOST_WIN32
 libmonoldflags=-no-undefined -avoid-version -Wl,--kill-at $(monoldflags)
