--- a/mono/mini/Makefile.am.in
+++ b/mono/mini/Makefile.am.in
@@ -521,7 +521,8 @@ test_sources = 			\
 	gshared.cs \
 	unaligned.cs	\
 	MemoryIntrinsics.il	\
-	mixed.cs
+	mixed.cs	\
+	ratests.cs
 
 regtests_UNIVERSAL = \
 	basic.exe \
@@ -538,7 +539,8 @@ regtests_UNIVERSAL = \
 	generics.exe \
 	basic-simd.exe \
 	unaligned.exe	\
-	basic-vectors.exe
+	basic-vectors.exe	\
+	ratests.exe
 
 regtests_DISABLED = 
 
