--- a/mcs/class/System.Data.DataSetExtensions/Makefile
+++ b/mcs/class/System.Data.DataSetExtensions/Makefile
@@ -8,7 +8,7 @@ LIB_REFS = System.Core System System.Data System.Xml
 KEYFILE = ../ecma.pub
 LIB_MCS_FLAGS = -nowarn:436 -d:COREFX
 
-TEST_MCS_FLAGS = $(LIB_MCS_FLAGS) -doc:$(test_lib:.dll=.xml)  -nowarn:219 -nowarn:169 $(NUNIT_RESOURCE_FILES:%=/resource:%)
+TEST_MCS_FLAGS = $(LIB_MCS_FLAGS) -nowarn:219 -nowarn:169 $(NUNIT_RESOURCE_FILES:%=/resource:%)
 
 EXTRA_DISTFILES = $(RESOURCE_FILES) \
 	Test/System.Data/testdataset1.xml
