--- a/mono/mini/Makefile.am.in
+++ b/mono/mini/Makefile.am.in
@@ -524,11 +524,13 @@ test_sources = 			\
 	mixed.cs
 
 regtests_UNIVERSAL = \
+	aot-tests.exe \
 	basic.exe \
 	basic-float.exe \
 	basic-long.exe \
 	basic-calls.exe \
 	builtin-types.exe \
+	gshared.exe \
 	objects.exe \
 	arrays.exe \
 	basic-math.exe \
@@ -797,7 +799,7 @@ llvmaotcheck:
 gsharedvtcheck:
 	$(MAKE) fullaotcheck GSHAREDVT=1
 
-fullaot_regtests = $(regtests) aot-tests.exe $(if $(GSHAREDVT),gshared.exe)
+fullaot_regtests = $(regtests)
 fullaot_testing_deps = generics-variant-types.dll TestDriver.dll MemoryIntrinsics.dll
 
 FULLAOT_LIBS_UNIVERSAL = \
