[corlib] Adds ValueTuple tests

--- a/mcs/class/corlib/Makefile
+++ b/mcs/class/corlib/Makefile
@@ -98,6 +98,7 @@ DEFAULT_REFERENCES =
 TEST_LIB_REFS = System.Core System
 
 XTEST_LIB_REFS = System System.Core Facades/System.Threading.Tasks Facades/System.Runtime.InteropServices.RuntimeInformation
+XTEST_LIB_FLAGS = -d:netcoreapp
 
 ifndef AOT_FRIENDLY_PROFILE
 ifneq ($(PROFILE),testing_aot_hybrid)
