[mini] Don't attempt to compile method of open generic class
It requires creating a vtable for the class, which is not supported.

--- a/mono/tests/Makefile.am
+++ b/mono/tests/Makefile.am
@@ -247,6 +247,7 @@ TESTS_CS_SRC=		\
 	delegate12.cs		\
 	delegate13.cs		\
 	delegate14.cs		\
+	delegate15.cs		\
 	largeexp.cs		\
 	largeexp2.cs		\
 	marshalbyref1.cs	\
