Fix spiller when the dest membase optimization intereferes with lvreg caching. Fixes #20562 (#5747)
* [mini] Fix spiller when the dest membase optimization intereferes with lvreg caching. Fixes #20562

Given this IR sequence:
	int_add R18 <- R18 R18
	move R37 <- R18

The spiller would use the dest membase optimization and change the `add` to `add_membase_reg` and assume that the value in R18 would still be valid afterwards. This was the case cuz the code handling sreg2 won't check whether R18 would be mutated but not kept in a register.

The fix is to disable lvreg caching if the dest membase optimization is used. It forces later uses to reload from memory, which is not great, but it's correct.

* [mini] Add regression test for #20562 and re-enable ratests.cs.

--- a/mono/mini/Makefile.am.in
+++ b/mono/mini/Makefile.am.in
@@ -521,7 +521,8 @@ test_sources = 			\
 	gshared.cs \
 	unaligned.cs	\
 	MemoryIntrinsics.il	\
-	mixed.cs
+	mixed.cs	\
+	ratests.cs
 
 regtests_UNIVERSAL = \
 	aot-tests.exe \
@@ -540,7 +541,8 @@ regtests_UNIVERSAL = \
 	generics.exe \
 	basic-simd.exe \
 	unaligned.exe	\
-	basic-vectors.exe
+	basic-vectors.exe	\
+	ratests.exe
 
 regtests_DISABLED = 
 
