Internationalization support for System.Windows.Forms: Removed unused localization resource files. Added default resources for English locale. Updated makefile and System.Windows.Forms-net_4_x.csproj. Class Locale now uses ResourceManager.

--- a/mcs/class/System.Windows.Forms/Makefile
+++ b/mcs/class/System.Windows.Forms/Makefile
@@ -14,7 +14,8 @@ LIB_MCS_FLAGS += /define:GENERATING_RESOURCES
 endif
 
 RESX_RESOURCES = \
-	resources/keyboards.resources
+	resources/keyboards.resources \
+        resources/System.Windows.Forms.resources
 
 CLEAN_FILES += $(RESX_RESOURCES)
 
