--- a/sdks/android/AndroidManifest.xml
+++ b/sdks/android/AndroidManifest.xml
@@ -7,11 +7,12 @@
   <uses-permission
        android:name="android.permission.INTERNET"/>
   <application android:label="@string/app_name" android:debuggable="true">
-    <activity android:name="org.mono.android.AndroidRunner" android:label="@string/app_name">
+    <activity android:name="org.mono.android.AndroidActivity" android:label="@string/app_name">
       <intent-filter>
         <action android:name="android.intent.action.MAIN" />
           <category android:name="android.intent.category.LAUNCHER" />
       </intent-filter>
     </activity>
   </application>
+  <instrumentation android:name="org.mono.android.AndroidRunner" android:targetPackage="org.mono.android.AndroidTestRunner" />
 </manifest> 
