[configure] Test AOT+LLVM if mono was configured to support both. (#5880)

--- a/configure.ac
+++ b/configure.ac
@@ -1064,13 +1064,6 @@ else
    with_profile4_x_default=yes
 fi
 
-if test "x$AOT_BUILD_FLAGS" != "x"; then :
-   AC_SUBST(AOT_BUILD_FLAGS)
-   AC_SUBST(AOT_RUN_FLAGS)
-   # For llvmonlycheck + fullaotcheck
-   AC_SUBST(INVARIANT_AOT_OPTIONS)
-fi
-
 AC_SUBST(TEST_PROFILE)
 
 if test "x$with_profile4_x" = "xdefault"; then
@@ -3035,6 +3028,11 @@ if test "x$enable_llvm" = "xyes"; then
       fi
    fi
 
+   if test x$with_runtime_preset != xbitcode; then
+      AOT_BUILD_FLAGS="$AOT_BUILD_FLAGS,llvm"
+      AOT_RUN_FLAGS="$AOT_RUN_FLAGS --llvm"
+   fi
+
    llvm_codegen="x86codegen"
    case "$target" in
    arm*)
@@ -3150,6 +3148,13 @@ if test "x$enable_llvm_runtime" = "xyes"; then
    AC_DEFINE(ENABLE_LLVM_RUNTIME, 1, [Runtime support code for llvm enabled])
 fi
 AM_CONDITIONAL(ENABLE_LLVM_RUNTIME, [test x$enable_llvm_runtime = xyes])
+
+if test "x$AOT_BUILD_FLAGS" != "x"; then :
+   AC_SUBST(AOT_BUILD_FLAGS)
+   AC_SUBST(AOT_RUN_FLAGS)
+   # For llvmonlycheck + fullaotcheck
+   AC_SUBST(INVARIANT_AOT_OPTIONS)
+fi
 
 TARGET="unknown"
 ACCESS_UNALIGNED="yes"
