Use getrandom() instead of /dev/urandom on Linux (#5851)
Use getrandom() instead of /dev/urandom on Linux

getrandom() was introduced in version 3.17 of the Linux kernel and glibc has implemented it since version 2.25.

--- a/configure.ac
+++ b/configure.ac
@@ -2643,6 +2643,12 @@ if test x$host_win32 = xno; then
 	 #endif
 	])
 	AC_CHECK_HEADERS([termios.h])
+
+	dnl *********************************
+	dnl *** Checks for random         ***
+	dnl *********************************
+	AC_CHECK_HEADERS(sys/random.h)
+	AC_CHECK_FUNCS(getrandom getentropy)
 else
 	dnl *********************************
 	dnl *** Checks for Windows compilation ***
